Updated the syntax
Added javascript functions and css responsive style in order to give more user friendly design

--- a/index.html
+++ b/index.html
@@ -5,23 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Alert box UI</title>
 	<link rel="shortcut icon" href="img.jpg">
+	<link rel="stylesheet" type="text/css" href="alert.css">
 	<script type="text/javascript" src="alert.js"></script>
-	<style type="text/css">
-		.btn-f{
-			font-size: 3vh;
-			margin: 2vh;
-			padding: 1vh;
-			background: white;
-			border: solid;
-			border-radius: 10px;
-		}
-		body{
-			text-align: center;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
+
 <body>
-<button class="btn-f" onclick="custom_alert('Abhineet Raj','Hello world, follow me on github for more such project','img.jpg')">Custom alert</button><br>
-<button class="btn-f" onclick="simple_alert('Abhineet Raj','Hello world, follow me on github for more such project')">Simple alert</button>
+<button class="btn-f" onclick="custom_alert('Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodoconsequat. Duis aute irure dolor in reprehenderit in voluptate velit essecillum dolore eu fugiat nulla pariatur. Excepteur sint ','img.jpg')">Custom alert</button><br>
+<button class="btn-f" onclick="simple_alert('Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmodtempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nostrud exercitation ullamco laboris nisi ut')">Simple alert</button>
 </body>
 </html>
